# walkie-talkie

./: .env.example  .gitignore
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/walkietalkie/: MainActivity.kt  WalkieTalkieApp.kt
android/app/src/main/java/com/walkietalkie/audio/: AudioCapture.kt  AudioPlayer.kt  StreamingDataSource.kt
android/app/src/main/java/com/walkietalkie/camera/: ImageCapture.kt
android/app/src/main/java/com/walkietalkie/data/websocket/: WsClient.kt  WsProtocol.kt
android/app/src/main/java/com/walkietalkie/service/: WalkieTalkieService.kt
android/app/src/main/java/com/walkietalkie/ui/components/: CodeBlock.kt  MessageBubble.kt  RecordButton.kt
android/app/src/main/java/com/walkietalkie/ui/screens/: ChatScreen.kt  SettingsScreen.kt
android/app/src/main/java/com/walkietalkie/ui/viewmodel/: ChatViewModel.kt
android/app/src/main/res/values/: themes.xml
scripts/: server.sh
server/: config.example.yaml  pyproject.toml
server/src/: config.py  main.py
server/src/claude/: client.py  system_prompt.py  tool_executor.py  tools.py
server/src/stt/: base.py  vad.py  whisper_stt.py
server/src/tts/: base.py  openai_tts.py
server/src/utils/: audio.py  safety.py
server/src/ws/: handler.py  protocol.py  session.py
